--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
   "devDependencies": {
     "babel-cli": "^6.1.18",
     "babel-core": "^6.1.18",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18"
+    "babel-preset-es2015": "^6.1.18"
   },
   "engine": "node >= 0.10.x",
   "homepage": "https://github.com/filipdanic/json2csvexporter",
