--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "devDependencies": {
     "babel-cli": "^6.1.18",
     "babel-core": "^6.1.18",
-    "babel-preset-es2015": "^6.1.18"
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-0": "^6.16.0"
   },
   "engine": "node >= 0.10.x",
   "homepage": "https://github.com/filipdanic/json2csvexporter",
