--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-./idea
 node_modules
 lib
-.idea/workspace.xml
-.idea/vcs.xml
-.idea/modules.xml
-.idea/misc.xml
-.idea/markdown-navigator/profiles_settings.xml
-.idea/json2csvexporter.iml
+.idea
