dependencies in the right place, "front-end"-tag

--- a/package.json
+++ b/package.json
@@ -29,22 +29,22 @@
     "csv export",
     "download csv",
     "csv client download",
-    "exporter"
+    "exporter",
+    "front-end"
   ],
-  "devDependencies": {},
-  "engine": "node >= 0.10.x",
-  "homepage": "https://github.com/filipdanic/json2csvexporter",
-  "bugs": {
-    "url": "https://github.com/filipdanic/json2csvexporter/issues"
-  },
-  "private": false,
-  "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "core-js": "^3.6.4",
     "rollup": "^2.3.0",
     "rollup-plugin-babel": "^4.4.0"
-  }
+  },
+  "engine": "node >= 0.10.x",
+  "homepage": "https://github.com/filipdanic/json2csvexporter",
+  "bugs": {
+    "url": "https://github.com/filipdanic/json2csvexporter/issues"
+  },
+  "private": false,
+  "license": "MIT"
 }
