fix paste accident

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "module/CSVExportService.js",
   "scripts": {
     "rollup": "rollup --config",
-    "babel": "npx babel -d lib/ src/",
+    "babel": "babel -d lib/ src/",
     "compile": "npm run babel && npm run rollup",
     "prepublish": "npm run compile"
   },
